<!--
  ~ strings.xml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 9/30/19 1:55 PM
  -->

<resources>
    <!-- Main -->
    <string name="app_name">Scrooge</string>
    <string name="action_settings">Settings</string>

    <string name="status_text">Aktueller Tagesstatus</string>
    <string name="active_chalenge_name">Aktive Herausforderung</string>
    <string name="money_spend_today">Tagesausgaben</string>
    <string name="money_left_today">Verbleibends Tages Budget</string>
    <string name="balance_over_whole_challenge">Gesammte challenge....</string>
    <string name="add_carry">Übertrag Vortag</string>
    <string name="challenges_table_name">Abgeschlossene:</string>
    <string name="expenses_of_today">Heute gekauft....</string>
    <string name="target_until_today">Soll bis Heute</string>
    <string name="actual_until_today">Ist bis Heute</string>
    <string name="remainig">Verbleibend</string>

    <string name="leave_warning">Die App wird verlassen, wenn Sie den Back- Button ein zweites mal drücken.
                                Der aktuelle Stand wird gespeichrt!</string>

    <!-- Spend Money fragment -->
    <string name="new_expense_fragment_titel">Ausgaben</string>
    <string name="new_expense_fragment_explain">Geben Sie bitte den Betrag ein, den Sie ausgegeben haben. Wählen Sie dann entweder aus der
    Liste ein Produkt oder, wenn es dort nicht enthalten ist, geben Sie einen beliebigen Text dafür ein.</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Abbrechen</string>

    <!-- New Challenge fragment -->
    <string name="new_challenge_fragment_titel">Neue Herausforderung</string>
    <string name="challenge_name">Name der Challenge?</string>
    <string name="challenge_goal">Maximale Summe/ Tag?</string>
    <string name="start_new_challenge_explain">Tragen Sie hier den Namen und das Ziel der neuen Herausforderung ein.
    Wenn Sie diesen Dialog bestätigen, wird die aktuelle Herausforderung gespeichert.</string>

    <!-- Dialog Fragment, shown when user enters amount of money spend and additional info -->
    <string name="amount_of_money_spend_hint">€</string>
    <string name="category_money_spend_for">Für was?</string>

    <!-- List and evaluate challenges -->
    <string name="title_list_and_eval_challenges">Übersicht abgeschlossene Herausforderungen</string>
    <string name="dialog_delete_challenges">Möchten Sie diese Herausforderung wirklich löschne? Wenn Sie das machen, dann werden auch alle dafür regestrierten Ausgaben gelöscht.</string>
    <string name="dialog_yes_button">Nein</string>
    <string name="dialog_no_button">Löschen!</string>
    <string name="challenges_delete_dialog">Herausforderung Löschen?</string>

    <!-- CSV export -->
    <string name="export_activity_titel">CSV- Export</string>
    <string name="export_csv_selection_text">CSV- Trennzeichen</string>

    <!-- Challenges row view -->
    <string name="date_started">Angefangen:</string>
    <string name="date_ended">Beendet:</string>
    <string name="goal">Tageslimit</string>
    <string name="ending_balance">Abschluss</string>
    <string name="total_amount_spend">Gesammtausgaben</string>

    <!-- Challenges Info -->
    <string name="activity_challenge_info_total_text">Insgesammt ausgegeben:</string>

    <!-- Confirm Dialog for CSV-export -->
    <string name="confirm_dialog_overwrite">Möchten Sie die folgende Datei überschreiben?</string>
    <string name="confirm_dialog_save_at">Möchten Sie die CSV- Tabelle hier speichern?</string>
    <string name="confirm_overwrite">Datei ersetzen</string>
    <string name="confirm_save_at">Datei speichern</string>
    <string name="cancel_save">Nicht speichern</string>

</resources>
