<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_spend_money.xml ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 11/3/19 8:40 AM
  -->

<!--
  ~ fragment_spend_money.xmly.xml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 3/28/18 9:19 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <Button
        android:id="@+id/ok_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ok_button"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ok_button" />

    <!-- List of common products -->
    <!-- You can add new products any time without changing the java- code  -->


    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_of_money_spend_hint"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/ic_menu_day"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/spend_for"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/category_money_spend_for"
        android:layout_marginTop="16dp"
        android:drawableLeft="@android:drawable/btn_star_big_off"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView8"
        style="@style/DialogBoxTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_expense_fragment_explain"

        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"></TextView>

    <ListView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:background="#55A0A0A0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spend_for"></ListView>


    <TextView
        android:id="@+id/textView10"
        style="@style/DialogBoxStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_expense_fragment_titel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok_button">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>