<?xml version="1.0" encoding="utf-8"?><!--
  ~ challenges_row_view.xmlml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 10/16/19 4:43 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"></View>

    <ImageButton
        android:id="@+id/export_this_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="@+id/challenge_name"
        app:layout_constraintEnd_toStartOf="@+id/challenge_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/challenge_name">
    </ImageButton>

    <ImageButton
        android:id="@+id/challenge_row_view_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_dialog_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challenge_name">

    </ImageButton>

    <ImageButton
        android:id="@+id/challenge_row_view_delete_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintStart_toStartOf="@+id/challenge_row_view_info_button"
        app:layout_constraintTop_toBottomOf="@+id/challenge_row_view_info_button"></ImageButton>


    <TextView
        android:id="@+id/goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/date_started"
        app:layout_constraintTop_toTopOf="@+id/textView6"></TextView>

    <TextView
        android:id="@+id/ending_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/goal"></TextView>

    <TextView
        android:id="@+id/challenge_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/challenge_row_view_info_button"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_started"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/challenge_name"
        app:layout_constraintTop_toTopOf="@+id/challenge_row_view_info_button"></TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/date_ended"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/date_started"
        app:layout_constraintTop_toTopOf="@+id/textView2"></TextView>

    <TextView
        android:id="@+id/date_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="--/--/---- --:--"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2">

    </TextView>

    <TextView
        android:id="@+id/date_ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="--/--/---- --:--"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/goal"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
    </TextView>

    <TextView
        android:id="@+id/textView7"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ending_balance"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">
    </TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total_amount_spend"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
    </TextView>

    <TextView
        android:id="@+id/this_challenge_total_money_spend"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:hint="--.-- €"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/challenge_name"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>
