<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ content_main.xml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 9/30/19 1:57 PM
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityMain"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/active_challenge_name_field"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/active_challenge_goal_field"
            android:textSize="40dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/money_spend_today">
            </TextView>
            <TextView
                android:id="@+id/date_of_active_challenge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/money_spend_today_field"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_carry">
        </TextView>
        <TextView
            android:id="@+id/add_carry_field"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/money_left_today">
        </TextView>
        <TextView
            android:id="@+id/money_left_today_field"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/spend_money"
            android:src="@android:drawable/ic_menu_add"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </ImageButton>

        <ImageButton
            android:id="@+id/close_cahllenge_start_new"
            android:src="@android:drawable/ic_menu_save"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenses_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:paddingTop="10dp"
        android:scrollbars="vertical">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.appcompat.widget.LinearLayoutCompat>